--- a/Chrome/app/manifest.json
+++ b/Chrome/app/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "__MSG_appName__",
-    "version": "0.2",
+    "name": "Github enhancement suite",
+    "version": "0.1",
     "manifest_version": 2,
-    "description": "__MSG_appDescription__",
+    "description": "Github enhance plugin for Google Chrome",
     "icons": {
         "16": "images/icon-16.png",
         "128": "images/icon-128.png"
@@ -29,8 +29,6 @@
     "content_scripts": [
         {
             "matches": [
-                "http://*/*",
-                "https://*/*",
                 "https://github.com/"
             ],
             "css": [
