--- a/Safari/Github Enhancement Suite.safariextension/Info.plist
+++ b/Safari/Github Enhancement Suite.safariextension/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>Author</key>
-	<string>Rens</string>
+	<string>Awkward</string>
 	<key>Builder Version</key>
-	<string>10600.4.10.7</string>
+	<string>10600.5.9</string>
 	<key>CFBundleDisplayName</key>
 	<string>Github enhancement suite</string>
 	<key>CFBundleIdentifier</key>
@@ -31,7 +31,7 @@
 	<key>Description</key>
 	<string>Github enhance plugin for Safari</string>
 	<key>DeveloperIdentifier</key>
-	<string>7CTLDUN43R</string>
+	<string>N4KR5KV52L</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
